--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -3,10 +3,18 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the Kyria OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+# disable rgb on start
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+# don't control ext_power with rgb, so oled is independent
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
+# more power to bt connection, should give better connection without much extra power usage
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# use deep sleep
+CONFIG_ZMK_SLEEP=y
