--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -6,12 +6,12 @@
 CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 # disable rgb on start
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+# CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 # don't control ext_power with rgb, so oled is independent
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # more power to bt connection, should give better connection without much extra power usage
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
