--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: kyria_left
+    shield: kyria_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: kyria_right
+    shield: kyria_right nice_view_adapter nice_view
