--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -1,6 +1,6 @@
 # Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the Kyria OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -11,8 +11,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 # disable rgb on start
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-# disable when not on usb
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+
 # don't control ext_power with rgb, so oled is independent
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
